# CPU-Net

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yaml
notebooks/: Training.ipynb  Validation.ipynb
src/cpunet/: dataset.py  network.py  tools.py
tests/: test_imports.py
